# my-essential-env-packages

./: .gitignore  CMakeLists.txt  README.md  addList.sh  compile.sh  essential-list.txt  filter-package.sh  install.sh  pkgLists.cmake  ubuntu-essential-list.txt
src/: CMakeLists.txt
